adds nc news project section

--- a/index.html
+++ b/index.html
@@ -1,147 +1,133 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ian Graham | Junior Software Developer</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" media="(max-width: 500px)" href="css/mobile.css" />
-    <script
-      src="https://kit.fontawesome.com/3e14ba6b53.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script.js" defer></script>
-  </head>
 
-  <body id="home">
-    <header class="hero">
-      <nav class="navbar">
-        <div class="logo">&nbsp;</div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ian Graham | Junior Software Developer</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" media="(max-width: 500px)" href="css/mobile.css" />
+  <script src="https://kit.fontawesome.com/3e14ba6b53.js" crossorigin="anonymous"></script>
+  <script src="script.js" defer></script>
+</head>
 
-        <a href="#" class="toggle-button">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
+<body id="home">
+  <header class="hero">
+    <nav class="navbar">
+      <div class="logo">&nbsp;</div>
 
-        <div class="navbar-links">
-          <ul>
-            <li><a href="#about"> About </a></li>
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
 
-            <li><a href="#projects">Projects</a></li>
+      <div class="navbar-links">
+        <ul>
+          <li><a href="#about"> About </a></li>
 
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
+          <li><a href="#projects">Projects</a></li>
 
-      <section class="hero-content">
-        <h1 class="hero-title">Hi, I'm Ian Graham</h1>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
 
-        <h2 class="hero-subtitle">Junior Software Developer</h2>
+    <section class="hero-content">
+      <h1 class="hero-title">Hi, I'm Ian Graham</h1>
 
-        <a class="btn" href="#about">About Me</a>
-      </section>
-    </header>
+      <h2 class="hero-subtitle">Junior Software Developer</h2>
 
-    <main class="main-content">
-      <article id="about">
-        <section class="about-info">
-          <div class="wrapper">
-            <div class="about-title-container">
-              <h2 class="about-title">About Me</h2>
-            </div>
-            <div class="about-info-content">
-              <figure>
-                <img
-                  class="profile-pic"
-                  src="./img/profile_400_400.jpg"
-                  width="400"
-                  height="400"
-                  alt="Ian Graham"
-                />
-              </figure>
-              <div class="about-paragraphs">
-                <p>
-                  Hello, my name is Ian. I'm a Junior Software Developer from
-                  Rossendale, Lancashire in the UK. I currently have experience
-                  in both front-end and back-end Web technologies and am always
-                  actively learning new things.
-                </p>
-                <p>
-                  Recently, I completed the 13-week long Software Engineering
-                  bootcamp at Northcoders which taught me so many skills in such
-                  a short amount of time.
-                </p>
-                <p>
-                  I am now looking for the opportunity to further increase my
-                  knowledge and experience, and am ready to apply myself and
-                  begin a career as a Junior Developer.
-                </p>
-              </div>
+      <a class="btn" href="#about">About Me</a>
+    </section>
+  </header>
+
+  <main class="main-content">
+    <article id="about">
+      <section class="about-info">
+        <div class="wrapper">
+          <div class="section-title-div">
+            <h2 class="section-title">About Me</h2>
+          </div>
+          <div class="about-info-content">
+            <figure>
+              <img class="profile-pic" src="./img/profile_400_400.jpg" width="400" height="400" alt="Ian Graham" />
+            </figure>
+            <div class="about-paragraphs">
+              <p>
+                Hello, my name is Ian. I'm a Junior Software Developer from
+                Rossendale, Lancashire in the UK. I currently have experience
+                in both front-end and back-end Web technologies and am always
+                actively learning new things.
+              </p>
+              <p>
+                Recently, I completed the 13-week long Software Engineering
+                bootcamp at Northcoders which taught me so many skills in such
+                a short amount of time.
+              </p>
+              <p>
+                I am now looking for the opportunity to further increase my
+                knowledge and experience, and am ready to apply myself and
+                begin a career as a Junior Developer.
+              </p>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <section class="skills">
-          <div class="wrapper">
-            <div class="skills-title-container">
-              <h2 class="skills-title">My Skills</h2>
-            </div>
+      <section class="skills">
+        <div class="wrapper">
+          <div class="section-title-div">
+            <h2 class="section-title">My Skills</h2>
+          </div>
 
-            <div class="skill-icons">
-              <figure>
-                <i class="fa-brands fa-html5 fa-10x" title="HTML5"></i>
-                <figcaption>HTML5</figcaption>
-              </figure>
+          <div class="skill-icons">
+            <figure>
+              <i class="fa-brands fa-html5 fa-10x" title="HTML5"></i>
+              <figcaption>HTML5</figcaption>
+            </figure>
 
-              <figure>
-                <i class="fa-brands fa-css3-alt fa-10x" title="CSS"></i>
-                <figcaption>CSS</figcaption>
-              </figure>
+            <figure>
+              <i class="fa-brands fa-css3-alt fa-10x" title="CSS"></i>
+              <figcaption>CSS</figcaption>
+            </figure>
 
-              <figure>
-                <i class="fa-brands fa-js fa-10x" title="JavaScript"></i>
-                <figcaption>JavaScript</figcaption>
-              </figure>
+            <figure>
+              <i class="fa-brands fa-js fa-10x" title="JavaScript"></i>
+              <figcaption>JavaScript</figcaption>
+            </figure>
 
-              <figure>
-                <i class="fa-brands fa-react fa-10x" title="React"></i>
-                <figcaption>React</figcaption>
-              </figure>
+            <figure>
+              <i class="fa-brands fa-react fa-10x" title="React"></i>
+              <figcaption>React</figcaption>
+            </figure>
 
-              <figure>
-                <i class="fa-brands fa-node fa-10x" title="Node JS"></i>
-                <figcaption>Node JS</figcaption>
-              </figure>
+            <figure>
+              <i class="fa-brands fa-node fa-10x" title="Node JS"></i>
+              <figcaption>Node JS</figcaption>
+            </figure>
 
-              <figure>
-                <i class="fa-solid fa-database fa-10x" title="SQL"></i>
-                <figcaption>SQL</figcaption>
-              </figure>
+            <figure>
+              <i class="fa-solid fa-database fa-10x" title="SQL"></i>
+              <figcaption>SQL</figcaption>
+            </figure>
 
-              <figure>
-                <i class="fa-brands fa-git-alt fa-10x" title="Git"></i>
-                <figcaption>Git</figcaption>
-              </figure>
+            <figure>
+              <i class="fa-brands fa-git-alt fa-10x" title="Git"></i>
+              <figcaption>Git</figcaption>
+            </figure>
 
-              <figure>
-                <i
-                  class="fa-solid fa-mobile-screen-button fa-10x"
-                  title="Responsive Design"
-                ></i>
-                <figcaption>Responsive Design</figcaption>
-              </figure>
+            <figure>
+              <i class="fa-solid fa-mobile-screen-button fa-10x" title="Responsive Design"></i>
+              <figcaption>Responsive Design</figcaption>
+            </figure>
 
-              <figure>
-                <i
-                  class="fa-solid fa-universal-access fa-10x"
-                  title="Accessibility"
-                ></i>
-                <figcaption>Accessibility</figcaption>
-              </figure>
-              <!-- <figure>
+            <figure>
+              <i class="fa-solid fa-universal-access fa-10x" title="Accessibility"></i>
+              <figcaption>Accessibility</figcaption>
+            </figure>
+            <!-- <figure>
                 <i class="fa-brands fa-square-js fa-10x" title="Express JS"></i>
                 <figcaption>Express JS</figcaption>
               </figure>
@@ -149,70 +135,89 @@
                 <i class="fa-solid fa-bug-slash fa-10x" title="Debugging"></i>
                 <figcaption>Debugging</figcaption>
               </figure> -->
-            </div>
           </div>
-        </section>
-      </article>
+        </div>
+      </section>
+    </article>
 
-      <article id="projects">
-        <section class="projects-showcase">
-          <div class="wrapper">
-            <div class="projects-showcase-title-container">
-              <h2 class="projects-showcase-title">Projects Showcase</h2>
-            </div>
+    <article id="projects">
+      <section class="projects-showcase">
+        <div class="wrapper">
+          <div class="section-title-div">
+            <h2 class="section-title">Projects Showcase</h2>
+          </div>
 
-            <div class="nc-news">
+          <section class="nc-news">
+
+            <div class="nc-news-info">
+
               <figure class="nc-news-figure">
                 <a href="https://nc-news-uk.netlify.app/" target="_blank">
-                  <img
-                    class="nc-news-img"
-                    src="./img/nc-news-screenshot-1.jpg"
-                    alt="NC News Project Homepage Screenshot"
-                    width="1649"
-                    height="1232"
-                  />
+                  <img class="nc-news-img" src="./img/nc-news-laptop-mockup.png"
+                    alt="NC News Project Homepage Screenshot" width="1649" height="1232" />
                 </a>
                 <figcaption class="offscreen">NC News Project</figcaption>
               </figure>
+
               <div class="project-paragraphs">
                 <h3>NC News App</h3>
                 <p>
                   A News App which allows the user to perform actions such as
                   browsing different articles, filtering them by different
                   attributes articles by topic, sort them by date, comment
-                  count, or votes. They can order in ascending or descending
+                  count, or votes.
+                </p>
+                <p>
+                  They can order in ascending or descending
                   order. Clicking on an article leads to its full view. Users
                   can upvote/downvote, post/delete comments (if they are the
                   author), and sign in as predefined users.
                 </p>
-                <p>
-                  Technologies used: <br />
-                  JavaScript, React.js, React Bootstrap, HTML5, CSS3, Git.
-                </p>
               </div>
             </div>
-          </div>
-        </section>
-      </article>
-    </main>
 
-    <footer id="footer">
-      <a href="#home">
-        <i class="fa-solid fa-circle-arrow-up fa-2x" title="Back To Top"></i>
+            <div class="tech-stack">
+              <h3>Technologies Used</h3>
+              <div class="project-icons">
+                <figure>
+                  <i class="fa-brands fa-js fa-5x" title="JavaScript"></i>
+                  <figcaption>JavaScript</figcaption>
+                </figure>
+                <figure>
+                  <i class="fa-brands fa-react fa-5x" title="React"></i>
+                  <figcaption>React</figcaption>
+                </figure>
+                <figure>
+                  <i class="fa-brands fa-html5 fa-5x" title="HTML5"></i>
+                  <figcaption>HTML5</figcaption>
+                </figure>
+
+                <figure>
+                  <i class="fa-brands fa-css3-alt fa-5x" title="CSS"></i>
+                  <figcaption>CSS</figcaption>
+                </figure>
+              </div>
+          </section>
+        </div>
+      </section>
+    </article>
+  </main>
+
+  <footer id="footer">
+    <a href="#home">
+      <i class="fa-solid fa-circle-arrow-up fa-2x" title="Back To Top"></i>
+    </a>
+    <p class="footer-text">Ian Graham &copy; 2024</p>
+
+    <div class="footer-social-icons">
+      <a href="https://www.linkedin.com/in/ian-graham-357649223/" target="_blank">
+        <i class="fa-brands fa-linkedin-in fa-2x"></i>
       </a>
-      <p class="footer-text">Ian Graham &copy; 2024</p>
+      <a href="https://github.com/Iagrah99" target="_blank">
+        <i class="fa-brands fa-github fa-2x"></i>
+      </a>
+    </div>
+  </footer>
+</body>
 
-      <div class="footer-social-icons">
-        <a
-          href="https://www.linkedin.com/in/ian-graham-357649223/"
-          target="_blank"
-        >
-          <i class="fa-brands fa-linkedin-in fa-2x"></i>
-        </a>
-        <a href="https://github.com/Iagrah99" target="_blank">
-          <i class="fa-brands fa-github fa-2x"></i>
-        </a>
-      </div>
-    </footer>
-  </body>
 </html>
