adds minor changes

--- a/index.html
+++ b/index.html
@@ -141,13 +141,16 @@
     </article>
 
     <article id="projects">
+
       <section class="projects-showcase">
+
         <div class="wrapper">
+          
           <div class="section-title-div">
             <h2 class="section-title">Projects Showcase</h2>
           </div>
 
-          <section class="nc-news">
+          <div class="nc-news">
 
             <div class="nc-news-info">
 
@@ -160,33 +163,41 @@
               </figure>
 
               <div class="project-paragraphs">
+
                 <h3>NC News App</h3>
                 <p>
                   A News App which allows the user to perform actions such as
-                  browsing different articles, filtering them by different
-                  attributes articles by topic, sort them by date, comment
-                  count, or votes.
+                  browsing different articles, filtering them by topic,
+                  sort them by date, comment count, or votes.
                 </p>
+
                 <p>
                   They can order in ascending or descending
                   order. Clicking on an article leads to its full view. Users
                   can upvote/downvote, post/delete comments (if they are the
                   author), and sign in as predefined users.
                 </p>
+
               </div>
+
             </div>
 
             <div class="tech-stack">
+
               <h3>Technologies Used</h3>
+
               <div class="project-icons">
+
                 <figure>
                   <i class="fa-brands fa-js fa-5x" title="JavaScript"></i>
                   <figcaption>JavaScript</figcaption>
                 </figure>
+
                 <figure>
                   <i class="fa-brands fa-react fa-5x" title="React"></i>
                   <figcaption>React</figcaption>
                 </figure>
+
                 <figure>
                   <i class="fa-brands fa-html5 fa-5x" title="HTML5"></i>
                   <figcaption>HTML5</figcaption>
@@ -196,11 +207,17 @@
                   <i class="fa-brands fa-css3-alt fa-5x" title="CSS"></i>
                   <figcaption>CSS</figcaption>
                 </figure>
+
               </div>
-          </section>
+
+            </div>
+
         </div>
-      </section>
+
+       </section>
+
     </article>
+
   </main>
 
   <footer id="footer">
