Adds Plant Pal Mobile App Project section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
               <figure>
                 <img
-                  src="./img/icons/icons8-node-js-512.png"
+                  src="./img/icons/Node-Js-Logo.png"
                   width="512"
                   height="512"
                   alt="Node JS Logo"
@@ -192,7 +192,7 @@
 
               <figure>
                 <img
-                  src="./img/icons/Responsive-Design.png"
+                  src="./img/icons/Responsive-Design-Icon.png"
                   width="512"
                   height="512"
                   alt="Responsive Design Image"
@@ -231,12 +231,11 @@
         <section class="projects-showcase">
           <div class="wrapper">
             <!-- NC News Project -->
-
             <div class="section-title-div">
               <h2 class="section-title">Projects Showcase</h2>
             </div>
 
-            <div id="nc-news" class="project-section">
+            <div id="nc-news-fe" class="project-section">
               <div class="project-info">
                 <figure>
                   <a href="https://nc-news-uk.netlify.app/" target="_blank">
@@ -252,7 +251,7 @@
                 </figure>
 
                 <div class="project-paragraphs">
-                  <h3>NC News App</h3>
+                  <h3>NC News Web App (Solo Project)</h3>
                   <p>
                     A News App which allows the user to perform actions such as
                     browsing different articles, filtering them by topic, sort
@@ -270,7 +269,7 @@
                       class="btn btn-small"
                       href="https://nc-news-uk.netlify.app/"
                       target="_blank"
-                      title="Visit Live Version"
+                      title="View Live Version"
                       >Live Version</a
                     >
                     <a
@@ -290,13 +289,24 @@
                 <div class="project-icons">
                   <figure>
                     <img
-                      src="./img/icons/HTML5-logo.png"
+                      src="./img/icons/React-logo.png"
                       width="512"
                       height="512"
-                      alt="HTML5 Logo"
-                      title="HTML5"
+                      alt="React Logo"
+                      title="React"
                     />
-                    <figcaption>HTML5</figcaption>
+                    <figcaption>React</figcaption>
+                  </figure>
+
+                  <figure>
+                    <img
+                      src="./img/icons/React-Bootstrap-Icon.png"
+                      width="512"
+                      height="512"
+                      alt="Bootstrap Logo"
+                      title="React Bootstrap"
+                    />
+                    <figcaption>React Bootstrap</figcaption>
                   </figure>
 
                   <figure>
@@ -309,35 +319,13 @@
                     />
                     <figcaption>CSS</figcaption>
                   </figure>
-
-                  <figure>
-                    <img
-                      src="./img/icons/JS-logo.png"
-                      width="512"
-                      height="512"
-                      alt="JavaScript Logo"
-                      title="JavaScript"
-                    />
-                    <figcaption>JavaScript</figcaption>
-                  </figure>
-
-                  <figure>
-                    <img
-                      src="./img/icons/React-logo.png"
-                      width="512"
-                      height="512"
-                      alt="React Logo"
-                      title="React"
-                    />
-                    <figcaption>React</figcaption>
-                  </figure>
                 </div>
               </div>
             </div>
 
             <!-- NC News API -->
 
-            <div id="nc-news" class="project-section">
+            <div id="nc-news-be" class="project-section">
               <div class="project-info">
                 <figure>
                   <a
@@ -358,7 +346,7 @@
                 </figure>
 
                 <div class="project-paragraphs">
-                  <h3>NC News API Server</h3>
+                  <h3>NC News API Server (Solo Project)</h3>
                   <p>
                     A backend REST Server API, which is consumed by the NC News
                     Web App. It implements CRUD operations through HTTP requests
@@ -372,8 +360,20 @@
                     application into different logical components.
                   </p>
                   <p class="project-links">
-                    <a class="btn btn-small" href="#">Live Version</a>
-                    <a class="btn btn-small" href="#">GitHub Repo</a>
+                    <a
+                      class="btn btn-small"
+                      href="https://nc-news-project-imqq.onrender.com/api"
+                      target="_blank"
+                      title="View Live Version"
+                      >Live Version</a
+                    >
+                    <a
+                      class="btn btn-small"
+                      href="https://github.com/Iagrah99/nc-be-project"
+                      target="_blank"
+                      title="Visit GitHub Repo"
+                      >GitHub Repo</a
+                    >
                   </p>
                 </div>
               </div>
@@ -417,7 +417,7 @@
 
                   <figure>
                     <img
-                      src="./img/icons/icons8-node-js-512.png"
+                      src="./img/icons/Node-Js-Logo.png"
                       width="512"
                       height="512"
                       alt="Node JS Logo"
@@ -425,6 +425,126 @@
                     />
                     <figcaption>Node JS</figcaption>
                   </figure>
+                </div>
+              </div>
+            </div>
+
+            <!-- Plant Pal Mobile App -->
+
+            <div id="plant-pal" class="project-section">
+              <div class="project-info">
+                <figure class="phone-figure">
+                  <a href="#" target="_blank">
+                    <img
+                      class="project-img"
+                      src="./img/plantpal-phone-mockup.png"
+                      alt="Plant Pal Sign Up Page Screenshot"
+                      width="201"
+                      height="427"
+                    />
+                  </a>
+                  <figcaption class="offscreen">PlantPal Mobile App</figcaption>
+                </figure>
+
+                <div class="project-paragraphs">
+                  <h3>PlantPal Mobile App (Group Project)</h3>
+                  <p>
+                    Plant Pal is a full-stack cross platform mobile app for
+                    Android and iOS which helps users keep track of their plants
+                    and maintain their health in an engaging way. Features
+                    include plant identifications via photo, personalised names
+                    for each plant in a user's collection and countdowns for
+                    feeding and watering times. Users may also delete plants
+                    from their account if needed.
+                  </p>
+                  <p class="project-links">
+                    <a
+                      class="btn btn-small"
+                      href="https://www.youtube.com/watch?v=cWCqloX4GWYi"
+                      target="_blank"
+                      title="View App Demo"
+                      >App Demo</a
+                    >
+                    <a
+                      class="btn btn-small"
+                      href="https://github.com/lvl7wizard/PlantPal"
+                      target="_blank"
+                      title="Visit GitHub Repo"
+                      >GitHub Repo</a
+                    >
+                  </p>
+                </div>
+              </div>
+
+              <div class="tech-stack">
+                <h3>Tech Stack</h3>
+
+                <div class="project-icons">
+                  <figure>
+                    <img
+                      src="./img/icons/MongoDB-Logo.png"
+                      width="512"
+                      height="512"
+                      alt="MongoDB Logo"
+                      title="MongoDB"
+                    />
+                    <figcaption>MongoDB</figcaption>
+                  </figure>
+
+                  <figure>
+                    <img
+                      src="./img/icons/Express_Logo.png"
+                      width="512"
+                      height="512"
+                      alt="Express JS Logo"
+                      title="Express JS"
+                    />
+                    <figcaption>Express JS</figcaption>
+                  </figure>
+
+                  <figure>
+                    <img
+                      src="./img/icons/React-Native-Logo.png"
+                      width="512"
+                      height="512"
+                      alt="React Native Logo"
+                      title="React Native"
+                    />
+                    <figcaption>React Native</figcaption>
+                  </figure>
+
+                  <figure>
+                    <img
+                      src="./img/icons/Node-Js-Logo.png"
+                      width="512"
+                      height="512"
+                      alt="Node JS Logo"
+                      title="Node JS"
+                    />
+                    <figcaption>Node JS</figcaption>
+                  </figure>
+
+                  <!-- <figure>
+                    <img
+                      src="./img/icons/CSS-logo.png"
+                      width="512"
+                      height="512"
+                      alt="CSS Logo"
+                      title="CSS"
+                    />
+                    <figcaption>CSS</figcaption>
+                  </figure>
+
+                  <figure>
+                    <img
+                      src="./img/icons/Expo-Logo.png"
+                      width="512"
+                      height="512"
+                      alt="Expo Logo"
+                      title="Expo"
+                    />
+                    <figcaption>Expo</figcaption>
+                  </figure> -->
                 </div>
               </div>
             </div>
