makes project sections more responsive on mobile

--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
             </div>
 
             <div id="nc-news-fe" class="project-section">
+              <h3 class="project-title">
+                NC News Web App <span class="nowrap">(Solo Project)</span>
+              </h3>
               <div class="project-info">
                 <figure>
                   <a href="https://nc-news-uk.netlify.app/" target="_blank">
@@ -251,7 +254,6 @@
                 </figure>
 
                 <div class="project-paragraphs">
-                  <h3>NC News Web App (Solo Project)</h3>
                   <p>
                     A News App which allows the user to perform actions such as
                     browsing different articles, filtering them by topic, sort
@@ -266,14 +268,14 @@
                   </p>
                   <p class="project-links">
                     <a
-                      class="btn btn-small"
+                      class="btn btn-small nowrap"
                       href="https://nc-news-uk.netlify.app/"
                       target="_blank"
                       title="View Live Version"
                       >Live Version</a
                     >
                     <a
-                      class="btn btn-small"
+                      class="btn btn-small nowrap"
                       href="https://github.com/Iagrah99/nc-fe-project"
                       target="_blank"
                       title="Visit GitHub Repo"
@@ -326,6 +328,9 @@
             <!-- NC News API -->
 
             <div id="nc-news-be" class="project-section">
+              <h3 class="project-title">
+                NC News API Server <span class="nowrap">(Solo Project)</span>
+              </h3>
               <div class="project-info">
                 <figure>
                   <a
@@ -346,7 +351,6 @@
                 </figure>
 
                 <div class="project-paragraphs">
-                  <h3>NC News API Server (Solo Project)</h3>
                   <p>
                     A backend REST Server API, which is consumed by the NC News
                     Web App. It implements CRUD operations through HTTP requests
@@ -361,14 +365,14 @@
                   </p>
                   <p class="project-links">
                     <a
-                      class="btn btn-small"
+                      class="btn btn-small nowrap"
                       href="https://nc-news-project-imqq.onrender.com/api"
                       target="_blank"
                       title="View Live Version"
                       >Live Version</a
                     >
                     <a
-                      class="btn btn-small"
+                      class="btn btn-small nowrap"
                       href="https://github.com/Iagrah99/nc-be-project"
                       target="_blank"
                       title="Visit GitHub Repo"
@@ -432,6 +436,9 @@
             <!-- Plant Pal Mobile App -->
 
             <div id="plant-pal" class="project-section">
+              <h3 class="project-title">
+                PlantPal Mobile App <span class="nowrap">(Group Project)</span>
+              </h3>
               <div class="project-info">
                 <figure class="phone-figure">
                   <a href="#" target="_blank">
@@ -447,7 +454,6 @@
                 </figure>
 
                 <div class="project-paragraphs">
-                  <h3>PlantPal Mobile App (Group Project)</h3>
                   <p>
                     Plant Pal is a full-stack cross platform mobile app for
                     Android and iOS which helps users keep track of their plants
@@ -459,14 +465,14 @@
                   </p>
                   <p class="project-links">
                     <a
-                      class="btn btn-small"
+                      class="btn btn-small nowrap"
                       href="https://www.youtube.com/watch?v=cWCqloX4GWYi"
                       target="_blank"
                       title="View App Demo"
                       >App Demo</a
                     >
                     <a
-                      class="btn btn-small"
+                      class="btn btn-small nowrap"
                       href="https://github.com/lvl7wizard/PlantPal"
                       target="_blank"
                       title="Visit GitHub Repo"
@@ -523,28 +529,6 @@
                     />
                     <figcaption>Node JS</figcaption>
                   </figure>
-
-                  <!-- <figure>
-                    <img
-                      src="./img/icons/CSS-logo.png"
-                      width="512"
-                      height="512"
-                      alt="CSS Logo"
-                      title="CSS"
-                    />
-                    <figcaption>CSS</figcaption>
-                  </figure>
-
-                  <figure>
-                    <img
-                      src="./img/icons/Expo-Logo.png"
-                      width="512"
-                      height="512"
-                      alt="Expo Logo"
-                      title="Expo"
-                    />
-                    <figcaption>Expo</figcaption>
-                  </figure> -->
                 </div>
               </div>
             </div>
