fixes for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ian Graham | Junior Software Developer</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" media="(max-width: 500px)" href="css/mobile.css" />
+    <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
     <script
       src="https://kit.fontawesome.com/3e14ba6b53.js"
       crossorigin="anonymous"
@@ -308,7 +308,7 @@
                       alt="Bootstrap Logo"
                       title="React Bootstrap"
                     />
-                    <figcaption>React Bootstrap</figcaption>
+                    <figcaption class="nowrap">React Bootstrap</figcaption>
                   </figure>
 
                   <figure>
