minor fix on mobile

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                       alt="Bootstrap Logo"
                       title="React Bootstrap"
                     />
-                    <figcaption class="nowrap">React Bootstrap</figcaption>
+                    <figcaption>React Bootstrap</figcaption>
                   </figure>
 
                   <figure>
