--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Ian Graham | Junior Software Developer</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/3e14ba6b53.js"
       crossorigin="anonymous"
@@ -531,6 +535,45 @@
                   </figure>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+      </article>
+
+      <article id="contact">
+        <section class="contact-section">
+          <div class="wrapper">
+            <div class="section-title-div">
+              <h2 class="section-title">Contact Me</h2>
+            </div>
+            <div class="contact-form">
+              <form action="">
+                <div class="form-group">
+                  <label for="name">Full Name:</label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    placeholder="Your name..."
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email Address:</label>
+                  <input
+                    type="text"
+                    name="email"
+                    id="email"
+                    placeholder="Your email..."
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="message">Your Message:</label>
+                  <textarea name="message" id="message"></textarea>
+                </div>
+                <button type="submit" class="btn">Submit</button>
+              </form>
             </div>
           </div>
         </section>
