changes about picture

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               <figure>
                 <img
                   class="profile-pic"
-                  src="./img/profile_400_400.jpg"
+                  src="./img/Ian.png"
                   width="400"
-                  height="400"
+                  height="533"
                   alt="Ian Graham"
                 />
               </figure>
