changes title text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
 
       <section class="hero-content">
-        <h1 class="hero-title">Hi, I'm Ian Graham</h1>
+        <h1 class="hero-title">Ian Graham</h1>
 
         <h2 class="hero-subtitle">Junior Software Developer</h2>
 
