--- a/index.html
+++ b/index.html
@@ -547,9 +547,13 @@
               <h2 class="section-title">Contact Me</h2>
             </div>
             <div class="contact-form">
-              <form action="">
+              <form
+                target="_self"
+                action="https://formsubmit.co/i4ng1999@gmail.com"
+                method="POST"
+              >
                 <div class="form-group">
-                  <label for="name">Full Name:</label>
+                  <label for="name">Name:</label>
                   <input
                     type="text"
                     name="name"
@@ -570,11 +574,25 @@
                 </div>
                 <div class="form-group">
                   <label for="message">Your Message:</label>
-                  <textarea name="message" id="message"></textarea>
+                  <textarea
+                    name="message"
+                    id="message"
+                    placeholder="Your message..."
+                  ></textarea>
                 </div>
                 <button type="submit" class="btn">Submit</button>
               </form>
             </div>
+            <h3>Or Message Me On...</h3>
+            <section class="social-icons">
+              <a
+                href="https://www.linkedin.com/in/ian-graham-357649223/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-linkedin-in fa-3x"></i>
+                LinkedIn
+              </a>
+            </section>
           </div>
         </section>
       </article>
