changes text on project GitHub repo links

--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
                       class="btn btn-small nowrap"
                       href="https://github.com/Iagrah99/nc-fe-project"
                       target="_blank"
-                      title="Visit GitHub Repo"
-                      >GitHub Repo</a
+                      title="View Source Code"
+                      >Source Code</a
                     >
                   </p>
                 </div>
@@ -379,8 +379,8 @@
                       class="btn btn-small nowrap"
                       href="https://github.com/Iagrah99/nc-be-project"
                       target="_blank"
-                      title="Visit GitHub Repo"
-                      >GitHub Repo</a
+                      title="View Source Code"
+                      >Source Code</a
                     >
                   </p>
                 </div>
@@ -468,8 +468,8 @@
                       class="btn btn-small nowrap"
                       href="https://github.com/lvl7wizard/PlantPal"
                       target="_blank"
-                      title="Visit GitHub Repo"
-                      >GitHub Repo</a
+                      title="View Source Code"
+                      >Source Code</a
                     >
                   </p>
                 </div>
