--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ian Graham | Junior Software Developer</title>
+
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" media="(max-width: 768px)" href="css/mobile.css" />
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
@@ -92,194 +93,15 @@
     <article id="projects">
       <section class="projects-showcase">
         <div class="wrapper">
-          <!-- NC News Project -->
+
           <div class="section-title-div">
             <h2 class="section-title">Projects Showcase</h2>
           </div>
 
-          <div id="nc-news-fe" class="project-section">
-            <h3 class="project-title">
-              NC News Web App <span class="nowrap">(Solo Project)</span>
-            </h3>
-            <div class="project-info">
-              <figure>
-                <a href="https://nc-news-uk.netlify.app/" target="_blank">
-                  <img class="project-img" src="./img/nc-news-laptop-mockup.png"
-                    alt="NC News Project Homepage Screenshot" width="1979" height="1350" />
-                </a>
-                <figcaption class="offscreen">NC News Project</figcaption>
-              </figure>
+          <div class="js-projects-container">
 
-              <div class="project-paragraphs">
-                <p>
-                  A News App which allows the user to perform actions such as
-                  browsing different articles, filtering them by topic, sort
-                  them by date, comment count, or votes.
-                </p>
-
-                <p>
-                  They can order in ascending or descending order. Clicking on
-                  an article leads to its full view. Users can
-                  upvote/downvote, post/delete comments (if they are the
-                  author), and sign in as predefined users.
-                </p>
-                <p class="project-links">
-                  <a class="btn btn-small nowrap" href="https://nc-news-uk.netlify.app/" target="_blank"
-                    title="View Live Version">Live Version</a>
-                  <a class="btn btn-small nowrap" href="https://github.com/Iagrah99/nc-fe-project" target="_blank"
-                    title="View Source Code">Source Code</a>
-                </p>
-              </div>
-            </div>
-
-            <div class="tech-stack">
-              <h3>Tech Stack</h3>
-
-              <div class="project-icons">
-                <figure>
-                  <img src="./img/icons/React-logo.png" width="512" height="512" alt="React Logo" title="React" />
-                  <figcaption>React</figcaption>
-                </figure>
-
-                <figure>
-                  <img src="./img/icons/React-Bootstrap-Icon.png" width="512" height="512" alt="Bootstrap Logo"
-                    title="React Bootstrap" />
-                  <figcaption>React Bootstrap</figcaption>
-                </figure>
-
-                <figure>
-                  <img src="./img/icons/CSS-logo.png" width="512" height="512" alt="CSS Logo" title="CSS" />
-                  <figcaption>CSS</figcaption>
-                </figure>
-              </div>
-            </div>
           </div>
 
-          <!-- NC News API -->
-
-          <div id="nc-news-be" class="project-section">
-            <h3 class="project-title">
-              NC News API Server <span class="nowrap">(Solo Project)</span>
-            </h3>
-            <div class="project-info">
-              <figure>
-                <a href="https://nc-news-project-imqq.onrender.com/api" target="_blank">
-                  <img class="project-img" src="./img/api-laptop-mockup.png" alt="NC News API Screenshot" width="450"
-                    height="353" />
-                </a>
-                <figcaption class="offscreen">
-                  Social News API Server
-                </figcaption>
-              </figure>
-
-              <div class="project-paragraphs">
-                <p>
-                  A backend REST Server API, which is consumed by the NC News
-                  Web App. It implements CRUD operations through HTTP requests
-                  to interact with a PostgreSQL database, which utilises
-                  queries that are tailored for specific endpoints.
-                </p>
-
-                <p>
-                  The Structure of the API follows the MVC (Model, View,
-                  Controller) architectural design pattern which organises the
-                  application into different logical components.
-                </p>
-                <p class="project-links">
-                  <a class="btn btn-small nowrap" href="https://nc-news-project-imqq.onrender.com/api" target="_blank"
-                    title="View Live Version">Live Version</a>
-                  <a class="btn btn-small nowrap" href="https://github.com/Iagrah99/nc-be-project" target="_blank"
-                    title="View Source Code">Source Code</a>
-                </p>
-              </div>
-            </div>
-
-            <div class="tech-stack">
-              <h3>Tech Stack</h3>
-
-              <div class="project-icons">
-                <figure>
-                  <img src="./img/icons/postgresql-icon.png" width="512" height="512" alt="PostgreSQL Logo"
-                    title="PostgreSQL" />
-                  <figcaption>PostgreSQL</figcaption>
-                </figure>
-
-                <figure>
-                  <img src="./img/icons/Express_Logo.png" width="512" height="512" alt="Express JS Logo"
-                    title="Express JS" />
-                  <figcaption>Express JS</figcaption>
-                </figure>
-
-                <figure>
-                  <img src="./img/icons/Node-Js-Logo.png" width="512" height="512" alt="Node JS Logo" title="Node JS" />
-                  <figcaption>Node JS</figcaption>
-                </figure>
-              </div>
-            </div>
-          </div>
-
-          <!-- Plant Pal Mobile App -->
-
-          <div id="plant-pal" class="project-section">
-            <h3 class="project-title">
-              PlantPal Mobile App <span class="nowrap">(Group Project)</span>
-            </h3>
-            <div class="project-info">
-              <figure class="phone-figure">
-                <a href="#" target="_blank">
-                  <img class="project-img" src="./img/plantpal-phone-mockup.png" alt="Plant Pal Sign Up Page Screenshot"
-                    width="201" height="427" />
-                </a>
-                <figcaption class="offscreen">PlantPal Mobile App</figcaption>
-              </figure>
-
-              <div class="project-paragraphs">
-                <p>
-                  Plant Pal is a full-stack cross platform mobile app for
-                  Android and iOS which helps users keep track of their plants
-                  and maintain their health in an engaging way. Features
-                  include plant identifications via photo, personalised names
-                  for each plant in a user's collection and countdowns for
-                  feeding and watering times. Users may also delete plants
-                  from their account if needed.
-                </p>
-                <p class="project-links">
-                  <a class="btn btn-small nowrap" href="https://www.youtube.com/watch?v=cWCqloX4GWYi" target="_blank"
-                    title="View App Demo">App Demo</a>
-                  <a class="btn btn-small nowrap" href="https://github.com/lvl7wizard/PlantPal" target="_blank"
-                    title="View Source Code">Source Code</a>
-                </p>
-              </div>
-            </div>
-
-            <div class="tech-stack">
-              <h3>Tech Stack</h3>
-
-              <div class="project-icons">
-                <figure>
-                  <img src="./img/icons/MongoDB-Logo.png" width="512" height="512" alt="MongoDB Logo" title="MongoDB" />
-                  <figcaption>MongoDB</figcaption>
-                </figure>
-
-                <figure>
-                  <img src="./img/icons/Express_Logo.png" width="512" height="512" alt="Express JS Logo"
-                    title="Express JS" />
-                  <figcaption>Express JS</figcaption>
-                </figure>
-
-                <figure>
-                  <img src="./img/icons/React-Native-Logo.png" width="512" height="512" alt="React Native Logo"
-                    title="React Native" />
-                  <figcaption>React Native</figcaption>
-                </figure>
-
-                <figure>
-                  <img src="./img/icons/Node-Js-Logo.png" width="512" height="512" alt="Node JS Logo" title="Node JS" />
-                  <figcaption>Node JS</figcaption>
-                </figure>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
     </article>
