organise file structure

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </div>
   </footer>
 
-  <script src="./script.js" type="module"></script>
+  <script src="./scripts/index.js" type="module"></script>
 </body>
 
 </html>
