Update profile picture

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="about-info-content">
             <figure>
-              <img class="profile-pic" src="./img/Ian.jpg" width="640" height="760" alt="Ian Graham" />
+              <img class="profile-pic" src="./img/cropped-Ian2.jpg" width="500" height="500" alt="Ian Graham" />
             </figure>
             <div class="about-paragraphs">
               <p>
